--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>tarefas-list</title>
 </head>
-
 <body>
     <div class="todo">
         <div class="todo__title">
             Tarefas - LIST
         </div>
 
-        <div class="todo__list" id='todoList'>
-
+        <div class="todo__list">
+            <label class="todo__item">
+                <input type="checkbox">
+                <div>teste de item 1</div>
+                <input type="button" value="X">
+            </label>
+            <label class="todo__item">
+                <input type="checkbox">
+                <div>teste de item 2</div>
+                <input type="button" value="X">
+            </label>
         </div>
 
         <div class="todo__new-item">
@@ -26,5 +33,4 @@
     </div>
     <script src="app.js"></script>
 </body>
-
 </html>
